--- a/TodoApp.Infrastructure/TodoApp.Infrastructure.csproj
+++ b/TodoApp.Infrastructure/TodoApp.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\TodoApp.Core\TodoApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.6" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
